--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,12 @@
   <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"  media="screen,projection"/>	
   <meta charset="utf-8">
   <title>NgLogotype</title>
-  <base href="https://pacotiger.github.io/NgLogotype">
+  <base href="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div>probando!</div>
   <app-root></app-root>
    <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
